# deepl-tr-webui

./: .gitignore  README.md  nodemon.json  package.json  pyproject.toml  pyrightconfig.json
.github/workflows/: routine-tests.yml
deepl_tr/: __init__.py  __main__.py  __main__2.py  access_localstorage.py  deepl_tr.py  gen_html.py  host-port-option.txt  httpserver.py  lang_pairs.py  list2csv.py  loadtext.py  main_webui2.py
deepl_tr/html/: tab1.html  tab2.html  tab3.html
deepl_tr/templates/: _navigation.html  aggrid-table.html  aggrid-table1.html  aggrid-table2.html  base.html  base1.html  child.html  dashboard.html  deepl-port.html  deepl-tr-base - Copy.html  deepl-tr-base.html  header.html  login.html  macros.html  navbar-active.html  result.html  tab1.html  tab2.html  tab3.html  tab3a.html  tablog.html  tabs.html  text.html
deepl_tr/tmpl/: aggrid-table1.html  aggrid-table2.html  deepl-tr-base.html  navbar-active.html  tab1.html  tab2.html  tab3.html
tests/: test_deepl_tr.py
